--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/salsa-chicken.html">Salsa Chicken</a>
-    <a href="./recipes/chorizo-tacos.html">Easy Chorizo Street Tacos</a>
-    <a href="./recipes/mexican-casserole.html">5-Ingredient Mexican Casserole</a>
+    <ul>
+        <li><a href="./recipes/salsa-chicken.html">Salsa Chicken</a></li>
+        <li><a href="./recipes/chorizo-tacos.html">Easy Chorizo Street Tacos</a></li>
+        <li><a href="./recipes/mexican-casserole.html">5-Ingredient Mexican Casserole</a></li>
+    </ul>
 </body>
 </html>
